2011-08-25 Pierrick Caillon <pierrick@in-cite.net>
	* Resolved Node::ReadList bug when the XML node is not an Element.
	* Node::SkipChildren does not had a bug. It was the intended behaviour.
	* Parsing for JourneyResult, Summary, Call, CallValue, Section, Time, EntryPointPlanJourney, StopPoint, Mode, Undefined and Nota nodes.
	* API request PlanJourney.
	* EntryPointDefinition class to convert an EntryPoint into a valid parameter value for PlanJourney.

2011-08-24 Pierrick Caillon <pierrick@in-cite.net>
	* Enhanced XML parsing architecture.
	* Parsing for EntryPoint, StopArea, City, Coord, Hang, Site and Address nodes
	* Created API service and first request EntryPointList.

2011-08-23 Pierrick Caillon <pierrick@in-cite.net>
	* Added: Nodes for EntryPoint, PlanJourney and StreetNetwork.
	* Started parsing for EntryPoint node.

2011-08-22 Pierrick Caillon <pierrick@in-cite.net>
	* Added: Time node.
	* Adjusted Node structure according to XML schemas.
	* Finished first data set for schedule's dummy service.

2011-08-19 Pierrick Caillon <pierrick@in-cite.net>

	* Added: Read only list.
	* Changed: new intermediate folder for node classes.
	* Added: Object fields.
	* Added: Dummy service for schedule with real hard data.
	* Changed: Extended type specification for nodes fields.

2011-08-18 Pierrick Caillon <pierrick@in-cite.net>

	* initial code generated with kickstarter
	* Added: Abstract node class.
	* Added: Node List class.
	* Added: Some of the nodes needed for schedule viewing.