@@ -13,12 +13,28 @@ class tx_icslibnavitia_ModeType extends tx_icslibnavitia_Node {
 	}
 	
 	public function ReadXML(XMLReader $reader) {
-		trigger_error('Not implemented', E_USER_NOTICE);
+		$this->_ReadXML($reader, 'ModeType');
 	}
+	
 	protected function ReadAttribute(XMLReader $reader) {
+		switch ($reader->name) {
+			case 'ModeTypeIdx':
+				$this->__set('idx', (int)$reader->value);
+				break;
+			case 'ModeTypeName':
+				$this->__set('name', $reader->value);
+				break;
+			case 'ModeTypeExternalCode':
+				$this->__set('externalCode', $reader->value);
+				break;
+		}
 	}
+
 	protected function ReadElement(XMLReader $reader) {
-		$this->SkipChildren($reader);
+		switch ($reader->name) {
+			default:
+				$this->SkipChildren($reader);
+		}
 	}
 	
 	public function __toString() {
