@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2011-08-25 16:13
+// This file was generated on 2011-08-26 11:40
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = t3lib_extMgm::extPath('ics_libnavitia') . 'Classes/';
@@ -25,6 +25,7 @@ return array(
 	'tx_icslibnavitia_nodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_NodeList.php',
 	'tx_icslibnavitia_nota' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Nota.php',
 	'tx_icslibnavitia_readonlynodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ReadOnlyNodeList.php',
+	'tx_icslibnavitia_route' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Route.php',
 	'tx_icslibnavitia_routepoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_RoutePoint.php',
 	'tx_icslibnavitia_section' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Section.php',
 	'tx_icslibnavitia_segment' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Segment.php',
@@ -35,6 +36,7 @@ return array(
 	'tx_icslibnavitia_summary' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Summary.php',
 	'tx_icslibnavitia_time' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Time.php',
 	'tx_icslibnavitia_undefined' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Undefined.php',
+	'tx_icslibnavitia_vehiclejourney' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_VehicleJourney.php',
 	'tx_icslibnavitia_inodelist' => $extensionClassesPath . 'DataObjects/interface.tx_icslibnavitia_INodeList.php',
 	'tx_icslibnavitia_apiservice' => $extensionClassesPath . 'Services/class.tx_icslibnavitia_APIService.php',
 	'tx_icslibnavitia_dummyscheduleservice' => $extensionClassesPath . 'Services/class.tx_icslibnavitia_DummyScheduleService.php',
